Header: Fix nav-links margin on tablet view

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -139,7 +139,8 @@ nav.nav-links a:hover {
     nav.nav-links {
         gap: 1rem;
         justify-content: space-between;
-        padding: 0 60px
+        padding: 0 60px;
+        margin-left: -7%;
     }
 
     .logos {
